Fix overlapped text on small devices.

--- a/src/containers/Generator/Generator.scss
+++ b/src/containers/Generator/Generator.scss
@@ -80,6 +80,11 @@ main.generator
 		input[type="text"]
 		{
 			padding-right: 30px;
+
+			&.private-key
+			{
+				padding-right: 50px;
+			}
 		}
 
 		.copy-button
